Make explicit that transports transport strings.